install bower and bootstrap

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,25 @@
 /tmp/*
 !/log/.keep
 !/tmp/.keep
+.DS_Store
 
 # Ignore Byebug command history file.
 .byebug_history
+
+# Ignore pow environment settings
+.powenv
+
+# Ignore Coverage
+/coverage/
+dump.rdb
+
+# Ignore dotenv
+.env
+.env*
+
+# if using bower-rails ignore default bower_components path bower.json files
+/vendor/assets/bower_components
+*.bowerrc
+bower.json
+
+/public/assets/*
