setup heroku deployment

--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,10 @@
 {
-  "lib": {
-    "name": "bower-rails generated lib assets",
-    "dependencies": {
-    }
-  },
-  "vendor": {
-    "name": "bower-rails generated vendor assets",
-    "dependencies": {
-      "bootstrap": "4.0.0-alpha.6",
-      "sweetalert": "latest",
-      "jquery-form-validator": "latest",
-      "bootstrap-select": "1.10.0",
-      "cleave-js": "latest"
-    }
+  "name": "dsl-generated-dependencies",
+  "dependencies": {
+    "bootstrap": "4.0.0-alpha.6",
+    "sweetalert": "latest",
+    "jquery-form-validator": "latest",
+    "bootstrap-select": "1.10.0",
+    "cleave-js": "latest"
   }
 }
