--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "dsl-generated-dependencies",
   "dependencies": {
-    "bootstrap": "4.0.0-alpha.6",
+    "bootstrap": "v4.0.0-beta",
     "sweetalert": "latest",
     "jquery-form-validator": "latest",
     "bootstrap-select": "1.10.0",
